Bug 473837 - Regression: LSPClient/symbol info no longer works
Summary: Regression: LSPClient/symbol info no longer works
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-08-28 08:09 UTC by Pozsgay Máté
Modified: 2023-08-29 15:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pozsgay Máté 2023-08-28 08:09:30 UTC
SUMMARY
On branch master the Symbol Info of the LSPClient plug-in no longer works on Kate master.

STEPS TO REPRODUCE
1. Open a document which have a proper LSP Server configured
2. Select menu entry LSP Client -> Symbol Info

OBSERVED RESULT
Virtually nothing happens

EXPECTED RESULT
Should open a hint window describing the details of the symbol found at the caret.

SOFTWARE/OS VERSIONS
Kate version: 23.11.70
Linux/KDE Plasma:  Ubuntu 22.04
KDE Frameworks Version: 5.109.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
This is broken for a while, but for example it was working properly on version 23.07.70. Tested shell/Python/Groovy, all the same, it is probably a problem with the plugin/kate itself.
Comment 1 Waqar Ahmed 2023-08-29 15:36:00 UTC
Git commit e17372e8a345828454f65f027dfd454ceb10dc32 by Waqar Ahmed.
Committed on 29/08/2023 at 17:35.
Pushed by waqar into branch 'master'.

lsp: Fix hover parsing

M  +3    -6    addons/lspclient/lspclientserver.cpp

https://invent.kde.org/utilities/kate/-/commit/e17372e8a345828454f65f027dfd454ceb10dc32
Comment 2 Waqar Ahmed 2023-08-29 15:36:41 UTC
Thanks for testing. We have switched to a new json parser so we really need lots of testing.