lsp: Fix hover parsing

BUG: 473837